--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Anem a provar els comentaris</h1>
+    <h1>Anem a provar els comentaris, aquest es el 2</h1>
+    
 </body>
 </html>
